--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "ruhend-scraper": "^9.0.1",
     "qrcode-terminal": "^0.12.0",
     "yt-search": "^2.10.0",
-    "denethdev-ytmp3": "^1.0.2",
+    "denethdev-ytmp3": "latest",
     "jimp": "^0.22.12",
     "sequelize": "^6.37.5",
     "sqlite3": "^5.1.7",
