--- a/package.json
+++ b/package.json
@@ -9,52 +9,52 @@
     "restart": "pm2 restart VILON-X-MD"
   },
   "dependencies": {
-    "@whiskeysockets/baileys": "^6.7.18",
-    "@adiwajshing/keyed-db": "^0.2.4",
-    "@dark-yasiya/yt-dl.js": "^1.0.3",
-    "@dark-yasiya/scrap": "^1.0.1",
-    "@ffmpeg-installer/ffmpeg": "^1.1.0",
-    "@vitalets/google-translate-api": "^9.2.1",
-    "fluent-ffmpeg": "^2.1.2",
-    "pino": "^9.7.0",
-    "pm2": "^6.0.8",
-    "util": "^0.12.5",
-    "express": "^4.19.2",
-    "axios": "^1.7.0",
-    "crypto-digest-sync": "^1.0.0",
-    "cheerio": "^1.0.0-rc.12",
-    "crypto-js": "^4.2.0",
-    "fs-extra": "^11.3.0",
-    "file-type": "^18.7.0",
-    "form-data": "^4.0.2",
-    "google-tts-api": "^2.0.2",
-    "node-fetch": "^3.3.2",
-    "btch-downloader": "^2.2.9",
-    "megajs": "^1.1.0",
-    "pdfkit": "^0.14.0",
-    "wa_set_pkg": "^1.0.5",
-    "wa-sticker-formatter": "^4.4.4",
-    "adm-zip": "^0.5.16",
-    "ruhend-scraper": "^9.0.1",
-    "qrcode-terminal": "^0.12.0",
-    "yt-search": "^2.10.0",
+    "@whiskeysockets/baileys": "latest",
+    "@adiwajshing/keyed-db": "latest",
+    "@dark-yasiya/yt-dl.js": "latest",
+    "@dark-yasiya/scrap": "latest",
+    "@ffmpeg-installer/ffmpeg": "latest",
+    "@vitalets/google-translate-api": "latest",
+    "fluent-ffmpeg": "latest",
+    "pino": "latest",
+    "pm2": "latest",
+    "util": "latest",
+    "express": "latest",
+    "axios": "latest",
+    "crypto-digest-sync": "latest",
+    "cheerio": "latest",
+    "crypto-js": "latest",
+    "fs-extra": "latest",
+    "file-type": "latest",
+    "form-data": "latest",
+    "google-tts-api": "latest",
+    "node-fetch": "latest",
+    "btch-downloader": "latest",
+    "megajs": "latest",
+    "pdfkit": "latest",
+    "wa_set_pkg": "latest",
+    "wa-sticker-formatter": "latest",
+    "adm-zip": "latest",
+    "ruhend-scraper": "latest",
+    "qrcode-terminal": "latest",
+    "yt-search": "latest",
     "denethdev-ytmp3": "latest",
-    "jimp": "^0.22.12",
-    "sequelize": "^6.37.5",
-    "sqlite3": "^5.1.7",
-    "api-dylux": "^1.8.5",
-    "mime-types": "^2.1.35",
-    "@mrnima/tiktok-downloader": "^1.0.0",
-    "@mrnima/facebook-downloader": "^1.0.0",
-    "mrnima-moviedl": "^1.0.0",
-    "hirunews-scrap": "^1.0.0",
-    "@sl-code-lords/esana-news": "^1.0.0",
-    "rss-parser": "^3.13.0",
-    "google-translate-api-x": "^10.7.2",
-    "moment-timezone": "^0.5.45",
-    "node-cache": "^5.1.2",
-    "darksadasyt-imgbb-scraper": "*",
-    "javascript-obfuscator": "^4.1.1",
-    "translate-google-api": "^1.0.4"
+    "jimp": "latest",
+    "sequelize": "latest",
+    "sqlite3": "latest",
+    "api-dylux": "latest",
+    "mime-types": "latest",
+    "@mrnima/tiktok-downloader": "latest",
+    "@mrnima/facebook-downloader": "latest",
+    "mrnima-moviedl": "latest",
+    "hirunews-scrap": "latest",
+    "@sl-code-lords/esana-news": "latest",
+    "rss-parser": "latest",
+    "google-translate-api-x": "latest",
+    "moment-timezone": "latest",
+    "node-cache": "latest",
+    "darksadasyt-imgbb-scraper": "latest",
+    "javascript-obfuscator": "latest",
+    "translate-google-api": "latest"
   }
 }
